--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.3.2",
+    "@material-ui/icons": "^4.2.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-pose": "^4.0.8",
+    "react-transition-group": "^4.2.2",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
