--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.24",
     "react": "^16.9.0",
+    "react-animated-slider": "^1.1.4",
     "react-dom": "^16.9.0",
     "react-pose": "^4.0.8",
     "react-transition-group": "^4.2.2",
