--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.24",
+    "clsx": "^1.0.4",
     "react": "^16.9.0",
     "react-animated-slider": "^1.1.4",
     "react-dom": "^16.9.0",
