--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-animated-slider": "^1.1.4",
     "react-dom": "^16.9.0",
     "react-pose": "^4.0.8",
+    "react-router-dom": "^5.0.1",
     "react-transition-group": "^4.2.2",
     "styled-components": "^4.3.2"
   },
