--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-pose": "^4.0.8",
     "react-router-dom": "^5.0.1",
     "react-transition-group": "^4.2.2",
+    "react-typing-effect": "^2.0.3",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
